src/App.scss
@font-face {
  font-family: 'Roboto-Light';
  src: url('./assets//fonts/Roboto/Roboto-Light.ttf') format('opentype');
}
@font-face {
  font-family: 'Roboto-Regular';
  src: url('./assets//fonts/Roboto/Roboto-Regular.ttf') format('opentype');
}
@font-face {
  font-family: 'Roboto-Medium';
  src: url('./assets//fonts/Roboto/Roboto-Medium.ttf') format('opentype');
}
@font-face {
  font-family: 'Roboto-Bold';
  src: url('./assets//fonts/Roboto/Roboto-Bold.ttf') format('opentype');
}

@mixin m($width){
  @media(max-width:#{$width}px){
    @content;
  }
}
@mixin en{
  html[dir="ltr"] & {
    @content;
  }
}
@mixin ar{
  html[dir="rtl"] & {
    @content;
  }
}
// how to use mixin
// @include en{
//     font-family: sans-serif;
// }
// @include ar{
//     font-family: sans-serif;
// }
html[dir="rtl"] body{
  text-align: right;
}
.App{
  font-family: 'Roboto-Regular';
  .vision_content{
    padding-top: 150px;
  }
  .loading_page{
    padding: 240px 20px 100px;
    text-align: center;
    i{
      font-size: 100px;
      line-height: 100px;
      color: #04035F;
    }
  }
  // Work Scope
  .work_scope {
    color: #FFF;
    padding: 100px 0;
    background-image: url(./assets//images/feature.png);
    background-size: cover;
    h2 {
      font-family: "Roboto-Bold";
      text-transform: uppercase;
      margin-bottom: 70px;
    }
    .scope {
      font-family: "Roboto-Medium";
      display: flex;
      align-items: center;
      color: #FFF;
      border: 2px solid #FFF;
      border-radius: 10px;
      padding: 20px;
      margin: 20px;
      cursor: pointer;
      transition: all ease-in-out 0.3s;
      -webkit-transition: all ease-in-out 0.3s;
      -moz-transition: all ease-in-out 0.3s;
      -ms-transition: all ease-in-out 0.3s;
      -o-transition: all ease-in-out 0.3s;
      &:hover {
        transform: scale(1.1);
        -webkit-transform: scale(1.1);
        -moz-transform: scale(1.1);
        -ms-transform: scale(1.1);
        -o-transform: scale(1.1);
        background-color: #FFF;
        color: #04035F;
        border: 2px solid #04035F;
      }
      img {
        width: 150px;
        height: 150px;
        border: 2px solid #04035F;
        border-radius: 10px;
        -webkit-border-radius: 10px;
        -moz-border-radius: 10px;
        -ms-border-radius: 10px;
        -o-border-radius: 10px;
        @include en{
          margin-right: 30px;
        }
        @include ar {
          margin-left: 30px;
        }
      }
      p {
        font-size: 20px;
        margin: 0;
        word-break: break-word;
      }
    }
  }
}
@media (max-width: 991px) {
  .App{
    .vision_content{
      padding-top: 140px;
    }
    // Work Scope
    .work_scope {
      padding: 100px 10px;
      h2{
        margin-bottom: 30px;
      }
      .scope{
        margin: 20px 0;
        img {
          width: 100px;
          height: 100px;
        }
      }
    }
  }
}

